<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wifiPlayer_3.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome!</string>
    <string name="share_btn">分享</string>
    <string name="recommend_btn">推荐软件</string>
    <string name="conn_pc_btn">连接电脑</string>
    <string name="main_dir_btn">主目录</string>
    <string name="open_file">打开文件</string>
    <string name="del_file">删除文件</string>
    <string name="cope_2_phone">拷贝到手机</string>
    <string name="cancel">取消</string>
    <string name="search_pc">搜索</string>
    <string name="conn_the_pc_use_ip">IP</string>
    <string name="ip_addr">IP:</string>
    <string name="ok">确定</string>
    <string name="input_ip_dialog_title">输入你需要控制的电脑IP</string>
    <string name="sina_weibo_share">新浪微博</string>
    <string name="tx_weibo_share">腾讯微博</string>
    <string name="email_share">Email</string>
    <string name="enable_control_pc">可以控制的电脑</string>
    <string name="please_wait">请稍后...</string>
    <string name="file_op">文件操作</string>
    <string name="ask">提示</string>
    <string name="del_file_remark">确定要永久删除此文件？</string>
    <string name="del_file_ok">删除成功！</string>
    <string name="del_file_err">删除文件失败</string>
    <string name="copy_file_dialog_title">文件拷贝</string>
    <string name="copying_file">正在拷贝文件："</string>
    <string name="copy_err">无法拷贝</string>
    <string name="del_err">删除失败</string>
    <string name="already_2_main_dir">已到主目录</string>
    <string name="play_succ">播放成功!</string>
    <string name="play_fail">播放失败，没有找到相应的音乐播放器!</string>
    <string name="no_pc_control">没有可以控制的电脑</string>
    <string name="share_content">我正在使用wifiPlayer,非常不错的一款软件</string>
    <string name="share">分享</string>
    <string name="share_succ">分享成功！</string>
    <string name="share_fail">分享失败！</string>
    <string name="ip_err">你输入的似乎不像是IP地址！</string>
    <string name="a_succ">授权成功!"</string>
    
    <!-- 新浪微博 -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="weibosdk_attention">注意</string>
    <string name="weibosdk_delete_all">是否要删除这条微博？</string>
    <string name="weibosdk_ok">是</string>
    <string name="weibosdk_cancel">否</string>
    <string name="weibosdk_app_name">com_weibo_android</string>
    <string name="weibosdk_send">发送</string>
     <string name="weibosdk_photo">拍照</string>
    <string name="weibosdk_close">关闭</string>
    <string name="weibosdk_share_dialog_title">新浪微博</string>
    <string name="weibosdk_please_login">请登录！</string>
    <string name="weibosdk_send_sucess">分享成功！</string>
    <string name="weibosdk_send_failed">分享失败！</string>
    <string name="weibosdk_del_pic">是否删除图片？</string>
    
     <string name="weibosdk_comment">评论</string>
      <string name="weibosdk_forward">转发</string>
       <string name="weibosdk_fav">收藏</string>
       <string name="testcontent"></string>
       
       <!-- 腾讯微博 -->
	<string name="textIntro">请选择授权方式：</string>

    <string name="btnOAuthV1">OAuthV1授权（webview）</string>
    <string name="btnOAuthV1Helper">OAuthV1授权（Helper）</string>
    <string name="btnOAuthV2ImplicitGrant">OAuthV2ImplicitGrant授权（webview）</string>
    
    <string name="btnRequest">获取Request_token</string>
    <string name="btnAuthorize">用WebView请求用户授权</string>
    <string name="btnAccess">获取Access_token</string>
    <string name="btnAPItest">微博API测试</string>
    <string name="textRequest">获取到的Request_token：</string>
    <string name="textVerifier">验证码：</string>
    <string name="textAccess">获取到的Access_token：</string>
    
    
    <string name="btnGetUsrInfo">获取用户信息</string>
    <string name="btnSendMsg">发送文字微博</string>
    <string name="btnSendMsgWithPic">发送带图的文字微博</string>
    <string name="textResponse">返回信息：</string>
    
    <string name="btnImplicitGrant">授权</string>
    <string name="send_tx_wei_bo_dialog_title">分享</string>
    <string name="send_tx_wei_bo_dialog_content_textview">内容：</string>
    <string name="send_tx_weibo_button">发送</string>
    <string name="cancle_send_tx_weibo_button">取消</string>
    <string name="sina_wei_bo_content">TODO</string>
    

</resources>