<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_title"
        android:gravity="center"
        android:text="@string/file_op"
        android:textColor="@color/white"
        android:textSize="20sp" />
	<Button 
	    android:id="@+id/openFileButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/item_long_click_view_btn"
	    android:text="@string/open_file"/>
	<Button 
	    android:id="@+id/delFileButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/item_long_click_view_btn"
	    android:text="@string/del_file"/>
	<Button 
	    android:id="@+id/cope2PhoneFileButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/item_long_click_view_btn"
	    android:text="@string/cope_2_phone"/>
	<Button 
	    android:id="@+id/cancelButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/item_long_click_view_btn"
	    android:text="@string/cancel"/>
</LinearLayout>