<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical" 
    android:layout_height="fill_parent"  
    android:layout_width="fill_parent"  
    >  
    <TextView
    	android:layout_width="260dp"
    	android:layout_height="wrap_content"
    	android:text="@string/send_tx_wei_bo_dialog_title"
    	android:layout_margin="5dp"
    	android:textSize="20sp"
    	android:gravity="center"
    />
    <LinearLayout
	    android:orientation="horizontal" 
	    android:layout_height="fill_parent"  
	    android:layout_width="fill_parent" 
	    android:gravity="top"
	    android:layout_margin="5dp"
    >
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/send_tx_wei_bo_dialog_content_textview"
    	android:textSize="15sp"
    	android:gravity="center"
    />
    <EditText
    	android:id="@+id/txWeiBoContentEditText"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textSize="15sp"
    	android:lines="6"
    	android:gravity="top"
    	android:text="@string/sina_wei_bo_content"
    />
    </LinearLayout>
    <LinearLayout
	    android:orientation="horizontal" 
	    android:layout_height="fill_parent"  
	    android:layout_width="fill_parent" 
	    android:gravity="center"
	    android:layout_margin="5dp"
    >
    <Button
    	android:id="@+id/sendTxWeiBoButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textSize="15sp"
		android:text="@string/send_tx_weibo_button"
		android:layout_margin="15dp"
    />
    <Button
    	android:id="@+id/cancleSendTxWeiBoButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textSize="15sp"
		android:text="@string/cancle_send_tx_weibo_button"
		android:layout_margin="15dp"
    />
    </LinearLayout>
</LinearLayout>