<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_title"
        android:gravity="center"
        android:text="@string/ask"
        android:textColor="@color/white"
        android:textSize="20sp" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/del_file_remark"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:textSize="15sp" />
    <LinearLayout
        android:id="@+id/sinaWeiBoShareLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >
	<Button 
	    android:id="@+id/okBtn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
	    android:text="@string/ok"/>
	<Button 
	    android:id="@+id/cancelBtn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
	    android:text="@string/cancel"/>
        
    </LinearLayout>

    

</LinearLayout>