<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg_wifiplayer"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_title"
        android:gravity="center"
        android:text="@string/conn_pc_btn"
        android:textColor="@color/white"
        android:textSize="20sp" />
    
    <LinearLayout
        android:id="@+id/searchPcButton"
        style="@style/item_long_click_view_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/search" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/search_pc"
            android:textColor="@color/white" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/connPcUseIPButton"
        style="@style/item_long_click_view_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ip_conn_pc" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/conn_the_pc_use_ip"
            android:textColor="@color/white" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/cancelButton"
        style="@style/item_long_click_view_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/cancel_green" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>
	
</LinearLayout>