<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:chg="http://schemas.android.com/apk/res/com.wifiplayer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/btnAreaLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_bottom"
        android:gravity="center"
        android:orientation="horizontal" >

        <com.wifiplayer.bean.myCtrlView.MyImageViewButton
            android:id="@+id/shareButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            chg:ImgButnOrientation="v"
            chg:TextSize="10sp"
            chg:TextColor="@color/white"
            chg:backGroundBefore="@drawable/share_before"
            chg:backGroundAfter="@drawable/share_after"
            chg:text="@string/share_btn"/>
        <com.wifiplayer.bean.myCtrlView.MyImageViewButton
            android:id="@+id/recommendButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            chg:ImgButnOrientation="v"
            chg:TextSize="10sp"
            chg:TextColor="@color/white"
            chg:backGroundBefore="@drawable/tj_before"
            chg:backGroundAfter="@drawable/tj_after"
            chg:text="@string/recommend_btn"/>
        <com.wifiplayer.bean.myCtrlView.MyImageViewButton 
            android:id="@+id/connPCButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            chg:ImgButnOrientation="v"
            chg:TextSize="10sp"
            chg:TextColor="@color/white"
            chg:backGroundBefore="@drawable/conn_pc_before"
            chg:backGroundAfter="@drawable/conn_pc_after"
            chg:text="@string/conn_pc_btn"/>
        <com.wifiplayer.bean.myCtrlView.MyImageViewButton 
            android:id="@+id/mainDirButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            chg:ImgButnOrientation="v"
            chg:TextSize="10sp"
            chg:TextColor="@color/white"
            chg:backGroundBefore="@drawable/main_dir_before"
            chg:backGroundAfter="@drawable/main_dir_after"
            chg:text="@string/main_dir_btn"/>
       
    </LinearLayout>
    
    <!--广告显示区域 -->
    <LinearLayout 
        android:id="@+id/adAreaLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentTop="true">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="广告显示区域"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:textSize="30sp"/>
    </LinearLayout>
    <ListView 
        android:id="@+id/dirListView"
        android:layout_above="@id/btnAreaLinearLayout"
        android:layout_below="@id/adAreaLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="#00000000"
        />

</RelativeLayout>